--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-601.6KB/s(Youtube:不良林), server: 152.89.210.105, port: 9014, type: ss, cipher: aes-256-cfb, password: KnJGad3FqTvjqbaX}
+  - {name: 🇺🇸 (已存活1天)美国-1.05MB/s(Youtube:不良林), server: 38.68.134.71, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇺🇸 美国-1.47MB/s(Youtube:不良林), server: 38.68.134.71, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇨🇦 加拿大-1.50MB/s(Youtube:不良林), server: 198.57.27.225, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇨🇦 加拿大-421.5KB/s(Youtube:不良林), server: 198.57.27.225, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇦🇺 澳大利亚-228.3KB/s(Youtube:不良林), server: 185.167.117.171, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
-  - {name: 🇺🇸 美国-1.10MB/s(Youtube:不良林), server: 169.197.142.39, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-1.52MB/s(Youtube:不良林), server: 169.197.142.39, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-1.08MB/s(Youtube:不良林), server: 169.197.142.39, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-722.3KB/s(Youtube:不良林), server: 169.197.142.39, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-16.03MB/s(Youtube:不良林), server: 9.vip341.xyz, port: 80, type: vmess, uuid: 2f0415a4-9acd-3435-a780-e447a2ce79fb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /ny, ws-headers: {Host: 9.vip341.xyz}}
   - {name: 🇺🇸 美国-835.7KB/s(Youtube:不良林), server: 169.197.142.39, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇬🇧 英国-1.77MB/s(Youtube:不良林), server: 152.89.210.105, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
+  - {name: 🇷🇺 俄罗斯联邦-2.14MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇸🇬 新加坡-588.9KB/s(Youtube:不良林), server: 129.226.214.28, port: 15430, type: vmess, uuid: 6e9a4ae9-e60b-4cea-af9f-9de18d37404e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 捷克-752.7KB/s(Youtube:不良林), server: ce.rutracker-cn.com, port: 443, type: trojan, password: 5y8y3CwxRVYhyfSY, sni: ce.rutracker-cn.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1022.1KB/s(Youtube:不良林), server: 34.215.130.186, port: 10089, type: vmess, uuid: 3608c9dc-1eeb-48b0-b570-43074b4a0c9e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 34.215.130.186}}
+  - {name: 🇺🇸 美国-1.81MB/s(Youtube:不良林), server: 169.197.142.39, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-601.6KB/s(Youtube:不良林)
+      - 🇺🇸 (已存活1天)美国-1.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-421.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-228.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-722.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-16.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-835.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-588.9KB/s(Youtube:不良林)
+      - 捷克-752.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1022.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-601.6KB/s(Youtube:不良林)
+      - 🇺🇸 (已存活1天)美国-1.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-421.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-228.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-722.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-16.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-835.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-588.9KB/s(Youtube:不良林)
+      - 捷克-752.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1022.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-601.6KB/s(Youtube:不良林)
+      - 🇺🇸 (已存活1天)美国-1.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-421.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-228.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-722.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-16.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-835.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-588.9KB/s(Youtube:不良林)
+      - 捷克-752.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1022.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-601.6KB/s(Youtube:不良林)
+      - 🇺🇸 (已存活1天)美国-1.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-421.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-228.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-722.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-16.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-835.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-588.9KB/s(Youtube:不良林)
+      - 捷克-752.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1022.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-601.6KB/s(Youtube:不良林)
+      - 🇺🇸 (已存活1天)美国-1.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-421.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-228.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-722.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-16.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-835.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-588.9KB/s(Youtube:不良林)
+      - 捷克-752.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1022.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-601.6KB/s(Youtube:不良林)
+      - 🇺🇸 (已存活1天)美国-1.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-421.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-228.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-722.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-16.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-835.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-588.9KB/s(Youtube:不良林)
+      - 捷克-752.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1022.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-601.6KB/s(Youtube:不良林)
+      - 🇺🇸 (已存活1天)美国-1.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-421.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-228.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-722.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-16.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-835.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-588.9KB/s(Youtube:不良林)
+      - 捷克-752.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1022.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
