--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 (已存活1天)美国-1.05MB/s(Youtube:不良林), server: 38.68.134.71, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇺🇸 美国-1.47MB/s(Youtube:不良林), server: 38.68.134.71, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-16.03MB/s(Youtube:不良林), server: 9.vip341.xyz, port: 80, type: vmess, uuid: 2f0415a4-9acd-3435-a780-e447a2ce79fb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /ny, ws-headers: {Host: 9.vip341.xyz}}
-  - {name: 🇺🇸 美国-835.7KB/s(Youtube:不良林), server: 169.197.142.39, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇬🇧 英国-1.77MB/s(Youtube:不良林), server: 152.89.210.105, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
-  - {name: 🇷🇺 俄罗斯联邦-2.14MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇸🇬 新加坡-588.9KB/s(Youtube:不良林), server: 129.226.214.28, port: 15430, type: vmess, uuid: 6e9a4ae9-e60b-4cea-af9f-9de18d37404e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 捷克-752.7KB/s(Youtube:不良林), server: ce.rutracker-cn.com, port: 443, type: trojan, password: 5y8y3CwxRVYhyfSY, sni: ce.rutracker-cn.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1022.1KB/s(Youtube:不良林), server: 34.215.130.186, port: 10089, type: vmess, uuid: 3608c9dc-1eeb-48b0-b570-43074b4a0c9e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 34.215.130.186}}
-  - {name: 🇺🇸 美国-1.81MB/s(Youtube:不良林), server: 169.197.142.39, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇷🇺 俄罗斯联邦-484.1KB/s(Youtube:不良林), server: 213.183.53.207, port: 9030, type: ss, cipher: aes-256-cfb, password: GeregetR8cvQHzYr}
+  - {name: 🇺🇸 美国-2.74MB/s(Youtube:不良林), server: 38.68.134.71, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇭🇰 香港-586.6KB/s(Youtube:不良林), server: s244.s2022.xyz, port: 30300, type: trojan, password: 44742458-ae53-3490-aeb6-a1a23d54c2be, sni: s244.s2022.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.51MB/s(Youtube:不良林), server: 169.197.142.39, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林), server: 185.167.116.253, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇷🇺 俄罗斯联邦-791.5KB/s(Youtube:不良林), server: 213.183.53.207, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
+  - {name: 🇺🇸 美国-849.3KB/s(Youtube:不良林), server: cd.rutracker-cn.com, port: 443, type: trojan, password: ukMzuFSmIXDvgW0h, sni: cd.rutracker-cn.com, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-416.5KB/s(Youtube:不良林), server: 213.183.51.171, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
+  - {name: 🇳🇱 荷兰-499.4KB/s(Youtube:不良林), server: 213.183.59.211, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
+  - {name: 🇳🇱 荷兰-642.4KB/s(Youtube:不良林), server: 213.183.51.171, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 (已存活1天)美国-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-16.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-835.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.77MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-588.9KB/s(Youtube:不良林)
-      - 捷克-752.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1022.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-484.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇭🇰 香港-586.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-791.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-849.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-416.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-499.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-642.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 (已存活1天)美国-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-16.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-835.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.77MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-588.9KB/s(Youtube:不良林)
-      - 捷克-752.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1022.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-484.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇭🇰 香港-586.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-791.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-849.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-416.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-499.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-642.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 (已存活1天)美国-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-16.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-835.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.77MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-588.9KB/s(Youtube:不良林)
-      - 捷克-752.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1022.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-484.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇭🇰 香港-586.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-791.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-849.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-416.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-499.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-642.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-586.6KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 (已存活1天)美国-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-16.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-835.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.77MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-588.9KB/s(Youtube:不良林)
-      - 捷克-752.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1022.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-484.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇭🇰 香港-586.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-791.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-849.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-416.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-499.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-642.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 (已存活1天)美国-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-16.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-835.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.77MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-588.9KB/s(Youtube:不良林)
-      - 捷克-752.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1022.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-484.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇭🇰 香港-586.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-791.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-849.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-416.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-499.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-642.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 (已存活1天)美国-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-16.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-835.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.77MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-588.9KB/s(Youtube:不良林)
-      - 捷克-752.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1022.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-484.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇭🇰 香港-586.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-791.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-849.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-416.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-499.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-642.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 (已存活1天)美国-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-16.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-835.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.77MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-588.9KB/s(Youtube:不良林)
-      - 捷克-752.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1022.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-484.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇭🇰 香港-586.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-791.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-849.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-416.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-499.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-642.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
