--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-484.1KB/s(Youtube:不良林), server: 213.183.53.207, port: 9030, type: ss, cipher: aes-256-cfb, password: GeregetR8cvQHzYr}
-  - {name: 🇺🇸 美国-2.74MB/s(Youtube:不良林), server: 38.68.134.71, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇭🇰 香港-586.6KB/s(Youtube:不良林), server: s244.s2022.xyz, port: 30300, type: trojan, password: 44742458-ae53-3490-aeb6-a1a23d54c2be, sni: s244.s2022.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.51MB/s(Youtube:不良林), server: 169.197.142.39, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林), server: 185.167.116.253, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇬🇧 英国-1.95MB/s(Youtube:不良林), server: 152.89.210.105, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
+  - {name: 🇺🇸 美国-3.22MB/s(Youtube:不良林), server: 169.197.142.39, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇦 加拿大-2.74MB/s(Youtube:不良林), server: 198.57.27.225, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇬🇧 英国-1.89MB/s(Youtube:不良林), server: 152.89.210.105, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
+  - {name: 捷克-752.7KB/s(Youtube:不良林), server: ce.rutracker-cn.com, port: 443, type: trojan, password: 5y8y3CwxRVYhyfSY, sni: ce.rutracker-cn.com, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-791.5KB/s(Youtube:不良林), server: 213.183.53.207, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
   - {name: 🇺🇸 美国-849.3KB/s(Youtube:不良林), server: cd.rutracker-cn.com, port: 443, type: trojan, password: ukMzuFSmIXDvgW0h, sni: cd.rutracker-cn.com, skip-cert-verify: true}
   - {name: 🇳🇱 荷兰-416.5KB/s(Youtube:不良林), server: 213.183.51.171, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-484.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
-      - 🇭🇰 香港-586.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.74MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
+      - 捷克-752.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-791.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-849.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-416.5KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-484.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
-      - 🇭🇰 香港-586.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.74MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
+      - 捷克-752.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-791.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-849.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-416.5KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-484.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
-      - 🇭🇰 香港-586.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.74MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
+      - 捷克-752.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-791.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-849.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-416.5KB/s(Youtube:不良林)
@@ -66,18 +66,17 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-586.6KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-484.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
-      - 🇭🇰 香港-586.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.74MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
+      - 捷克-752.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-791.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-849.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-416.5KB/s(Youtube:不良林)
@@ -88,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-484.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
-      - 🇭🇰 香港-586.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.74MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
+      - 捷克-752.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-791.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-849.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-416.5KB/s(Youtube:不良林)
@@ -104,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-484.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
-      - 🇭🇰 香港-586.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.74MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
+      - 捷克-752.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-791.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-849.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-416.5KB/s(Youtube:不良林)
@@ -129,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-484.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
-      - 🇭🇰 香港-586.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.74MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
+      - 捷克-752.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-791.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-849.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-416.5KB/s(Youtube:不良林)
